--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monish Haresh Giani | My Portfolio</title>
+
+    <meta property="og:title" content="Monish Haresh Giani | Computer Science Student & Developer" />
+    <meta property="og:description" content="Computer Science student at Binus International University. Passionate about web security, algorithms, and systems design." />
+    <meta property="og:image" content="https://raw.githubusercontent.com/MonishGiani1/Portfolio/main/preview.png" />
+    <meta property="og:url" content="https://my-portfolio-phi-one-54.vercel.app/" />
+    <meta property="og:type" content="website" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600;700&family=Syne:wght@600;700;800&display=swap" rel="stylesheet">
