--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600;700&family=Syne:wght@600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -51,7 +51,7 @@
                     <div class="terminal-prompt">$ whoami ▊</div>
                     <h2 class="hero-name">Monish Haresh Giani</h2>
                     <p class="hero-subtitle">
-                        Hello, I'm a computer science student at Binus International University. Passionate about algorithms, systems design, and breaking into software. Nothing malicious of course, its only in the pursuit of implementing better security measures so we would never have to worry about those pesky hackers stealing our data ;)
+                        Computer Science student at Binus International University with a focus on algorithms, systems design, and cybersecurity. Specialized in developing and implementing robust security frameworks to protect organizational data and infrastructure.
                     </p>
                     <div class="cta-buttons">
                         <button class="btn btn-primary" onclick="switchTab('projects')">View Projects</button>
@@ -82,6 +82,42 @@
                     <div class="section-label">$ ls projects/</div>
                     <h2>Featured Projects</h2>
                 </div>
+
+                <div class="project-card">
+                        <div class="project-header">
+                            <h3 class="project-title">LaTeX to HTML Compiler</h3>
+                            <span class="project-year">2025</span>
+                        </div>
+                        <p class="project-description">
+                            Translates raw .tex files and turns them into pure HTML with CSS applied. Consists of Lexers, Parsers, AST and Code Generation
+                            <span style="color: var(--accent-secondary); font-size: 0.85rem; display: block; margin-top: 0.5rem;">Team Project (3 members)</span>
+
+                        </p>
+                        <div class="tech-stack">
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">LaTeX</span>
+                            <span class="tech-tag">File I/O</span>
+                            <span class="tech-tag">HTML</span>
+                            <span class="tech-tag">CSS</span>
+                        </div>
+                    </div>
+
+                <div class="project-card">
+                        <div class="project-header">
+                            <h3 class="project-title">Galaxy Simulator</h3>
+                            <span class="project-year">2025</span>
+                        </div>
+                        <p class="project-description">
+                            A simulation of a dwarf galaxy with over 1000 stars and settings to manipulate dark energy volume
+                            <span style="color: var(--accent-secondary); font-size: 0.85rem; display: block; margin-top: 0.5rem;">Team Project (2 members)</span>
+
+                        </p>
+                        <div class="tech-stack">
+                            <span class="tech-tag">Python</span>
+                        </div>
+                    </div>
+                
+
                 <div class="projects-grid">
                     <div class="project-card">
                         <div class="project-header">
@@ -136,6 +172,23 @@
 
                     <div class="project-card">
                         <div class="project-header">
+                            <h3 class="project-title">Splice Site Prediction Tool</h3>
+                            <span class="project-year">2023</span>
+                        </div>
+                        <p class="project-description">
+                            Research Project that aims to compare Machine Learning and Deep Learning models to detect splice site locations, in order to see if traditional ML can compete with DL
+                            <span style="color: var(--accent-secondary); font-size: 0.85rem; display: block; margin-top: 0.5rem;">Team Project (2 members)</span>
+
+                        </p>
+                        <div class="tech-stack">
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">Streamlit</span>
+                            <span class="tech-tag">File I/O</span>
+                        </div>
+                    </div>
+
+                    <div class="project-card">
+                        <div class="project-header">
                             <h3 class="project-title">Student Grade Calculator</h3>
                             <span class="project-year">2023</span>
                         </div>
@@ -149,6 +202,8 @@
                             <span class="tech-tag">File I/O</span>
                         </div>
                     </div>
+
+                    
 
                     <div class="project-card">
                         <div class="project-header">
